# weld

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bench.sh  blackscholes.py  build.rs  unimplemented.sh
weld/: Cargo.toml  annotations.rs  api.rs  ast.rs  build.rs  code_builder.rs  codegen.rs  colors.rs  common.rs  conf.rs  error.rs  expr_hash.rs  exprs.rs  ffi.rs  lib.rs  llvm.rs  macro_processor.rs  parser.rs  partial_types.rs  passes.rs  pretty_print.rs  program.rs  runtime.rs  sir.rs  stats.rs  tests.rs  tokenizer.rs  transforms.rs  type_inference.rs  util.rs  vectorizer.rs
weld-capi/: .gitignore  Cargo.toml  README.md  build.rs  weld.h
weld-capi/src/: lib.rs
weld-ffi/: Cargo.toml  build.rs
weld-python/: Cargo.toml  README.md  requirements.txt  setup.py  test.py
weld-python/doc/source/: api_reference.rst  conf.py  index.rst  quick_start.rst
weld-python/src/: lib.rs  npy_enc.rs
weld-python/stringtest/: setup.py
weld-python/stringtest/stringtest/: strings.cpp  stringtest.py
weld-python/tests/: compile_test.py  lazy_test.py  test.py
weld-python/tests/core/: lazy_test.py
weld-python/tests/encoders/: test_numpy.py  test_primitives.py
weld-python/tests/grizzly/: test_series.py
weld-python/tests/grizzly/core/: test_agg.py  test_frame.py  test_series.py  test_strings.py
weld-python/tests/weld/core/: test_compile.py  test_lazy.py
weld-python/tests/weld/encoders/: helpers.py  test_numpy.py  test_numpy_strings.py  test_primitives.py
weld-python/tests/weld/lazy/: test_weldfunc.py
weld-python/weld/: __init__.py  compile.py  conftest.py  encoder.py  error.py  lazy.py  types.py
weld-python/weld/encoders/: __init__.py  encoder_base.py  numpy.py  primitives.py  strings.cpp  struct.py
weld-python/weld/grizzly/: __init__.py  array.py  base.py  error.py  ops.py  series.py
weld-python/weld/grizzly/core/: forwarding.py  frame.py  generic.py  series.py  strings.py
weld-python/weld/grizzly/core/indexes/: __init__.py  base.py  column.py
weld-python/weld/grizzly/weld/: agg.py  ops.py  str.py  util.py
weld/annotation/: mod.rs
weld/ast/: ast.rs  builder.rs  cmp.rs  constructors.rs  hash.rs  mod.rs  prelude.rs  pretty_print.rs  type_inference.rs  uniquify.rs
weld/codegen/: mod.rs
weld/codegen/llvm/: llvm.rs  mod.rs
weld/codegen/llvm/easy_ll/: mod.rs  tests.rs
weld/codegen/llvm/resources/: eq_on_pointers.ll  prelude.ll  serialize_on_pointers.ll
weld/codegen/llvm/resources/merger/: merger.ll  merger_result_end_vectorized_1.ll  merger_result_end_vectorized_2.ll  merger_result_start.ll
weld/codegen/llvm/resources/vector/: deserialize_with_pointers.ll  serialize_with_pointers.ll  vector.ll  vector_comparison.ll  vector_hash.ll  (+1 more)
weld/codegen/llvm2/: builder.rs  cmp.rs  compile.rs  dict.rs  dict_new.rs  eq.rs  gen_numeric.rs  hash.rs  intrinsic.rs  jit.rs  literal.rs  llvm_exts.rs  merger.rs  mod.rs  numeric.rs  serde.rs  target.rs  unimplemented.sh  vector.rs
weld/codegen/llvm2/builder/: appender.rs  dictmerger.rs  for_loop.rs  groupmerger.rs  merger.rs  mod.rs  vecmerger.rs
weld/conf/: constants.rs  mod.rs
weld/data/: mod.rs
weld/easy_ll/: mod.rs  tests.rs
weld/error/: mod.rs
weld/exprs/: mod.rs
weld/ffi/: mod.rs
weld/llvmext/: Makefile  llvmext.cpp  llvmext.h
weld/new_types/: ast.rs  inference.rs  mod.rs
weld/optimizer/: mod.rs  passes.rs
weld/optimizer/transforms/: algebraic.rs  annotator.rs  cse.rs  inliner.rs  loop_fusion.rs  loop_fusion_2.rs  mod.rs  short_circuit.rs  size_inference.rs  unroller.rs  vectorizer.rs
weld/resources/: dictionary.ll  dictionary_global.ll  dictmerger.ll  dictmerger_global.ll  eq_on_pointers.ll  groupbuilder.ll  merger.ll  prelude.ll  runtime_interface_module.ll  standard_macros.weld  vector.ll  vvector.ll
weld/resources/dictionary/: deserialize_dictionary.ll  dictionary.ll  dictmerger.ll  serialize_dictionary.ll
weld/resources/merger/: init_merger.ll  merger.ll  merger_result_end.ll  merger_result_end_vectorized_1.ll  merger_result_end_vectorized_2.ll  merger_result_start.ll
weld/resources/vecmerger/: vecmerger_result_end.ll  vecmerger_result_start.ll
weld/resources/vector/: deserialize_with_pointers.ll  deserialize_without_pointers.ll  growable_vector.ll  serialize_with_pointers.ll  serialize_without_pointers.ll  veci8_hash.ll  vector.ll  vector_sort.ll
weld/runtime/: ffi.rs  link.rs  mod.rs  strt.rs
weld/sir/: mod.rs
weld/sir/optimizations/: fold_constants.rs  mod.rs
weld/src/: lib.rs  transforms.rs  type_inference.rs
weld/src/ast/: builder.rs  cmp.rs  constructors.rs  hash.rs  mod.rs  type_inference.rs  uniquify.rs
weld/src/codegen/: mod.rs
weld/src/codegen/llvm/: cmp.rs  dict.rs  eq.rs  jit.rs  mod.rs  numeric.rs  serde.rs
weld/src/codegen/llvm2/: cmp.rs  dict.rs  intrinsic.rs  jit.rs  mod.rs  numeric.rs  serde.rs
weld/src/conf/: constants.rs
weld/src/data/: mod.rs
weld/src/optimizer/: mod.rs  passes.rs
weld/src/optimizer/transforms/: algebraic.rs  cse.rs  inliner.rs  loop_fusion.rs  loop_fusion_2.rs  short_circuit.rs  size_inference.rs  unroller.rs  vectorizer.rs
weld/src/resources/: standard_macros.weld
weld/src/runtime/: ffi.rs  mod.rs
weld/src/sir/: mod.rs
weld/src/sir/optimizations/: fold_constants.rs  mod.rs  simplify_assignments.rs
weld/src/syntax/: parser.rs  program.rs  tokenizer.rs
weld/src/tests/: mod.rs
weld/src/util/: mod.rs
weld/syntax/: macro_processor.rs  mod.rs  parser.rs  program.rs  tokenizer.rs
weld/tests/: complex_loop_tests.rs  dictionary_tests.rs  merger_tests.rs  mod.rs  vector_tests.rs
weld/transforms/: algebraic.rs  annotator.rs  inliner.rs  loop_fusion.rs  loop_fusion_2.rs  mod.rs  short_circuit.rs  size_inference.rs  uniquify.rs  unroller.rs  vectorizer.rs
weld/type_inference/: mod.rs
weld/util/: colors.rs  dump.rs  mod.rs  stats.rs
weld/weld_common/: README.md
weld_llvm/: Cargo.toml  code_builder.rs  lib.rs  tests.rs
weld_parser/: Cargo.toml  grammar.lalrpop  lib.rs
weld_parser/src/: grammar.lalrpop  lib.rs  partial_types.rs  program.rs
(+360 files in other folders)
