[package]
name = "weld"
version = "0.1.0"
authors = ["Weld Developers <weld-group@lists.stanford.edu>"]
build = "build.rs"

[dependencies]
lazy_static = "0.2.1"
regex = "0.1.71"
rustyline = "1.0.0"
libc = "0.2.0"
csv = "0.15.0"
log = "*"
env_logger = "*"
chrono = "*"
llvm-sys = "38.0.1"

[lib]
path = "weld/lib.rs"
crate-type = ["cdylib", "rlib"]
bench = false

[[bin]]
name = "repl"
path = "weld/bin/repl.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false
bench = false