[package]
name = "weld"
version = "0.2.0"
authors = ["Weld Developers <weld-group@lists.stanford.edu>"]
build = "build.rs"
description = "Weld is a language and runtime for improving the performance of data-intensive applications. It optimizes across libraries and functions by expressing the core computations in libraries using a common intermediate representation, and optimizing across each framework."
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://www.weld.rs"
repository = "https://github.com/weld-project/weld"

[dependencies]
lazy_static = "0.2.1"
regex = "0.1.71"
rustyline = "1.0.0"
libc = "0.2.0"
csv = "0.15.0"
log = "0.3.8"
env_logger = "0.4.3"
chrono = "0.4.0"
time = "0.1.38"
llvm-sys = "38.0.1"
fnv = "1.0.5"
clap = "2.31.1"


[lib]
path = "weld/lib.rs"
crate-type = ["cdylib", "rlib"]
bench = false

[[bin]]
name = "repl"
path = "weld/bin/repl.rs"
bench = false


[[bin]]
name = "hdrgen"
path = "weld/bin/hdrgen.rs"
bench = false

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false
bench = false
