[package]
name = "weld-capi"
version = "0.4.0"
authors = ["Shoumik Palkar <shoumik@cs.stanford.edu>"]
edition = "2018"
readme = "README.md"

[dependencies]
libc = "0.2.0"
weld = { path = "../weld" }

[build-dependencies]
cbindgen = "0.8.0"

[lib]
name = "weld"
doc = false
crate-type = ["cdylib", "staticlib"]
