[package]
name = "weld-ffi"
version = "0.2.0"
authors = ["Weld Developers <weld-group@lists.stanford.edu>"]
description = "C bindings to Weld"
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://www.weld.rs"
repository = "https://github.com/weld-project/weld"

[lib]
name = "weld"
crate-type = [ "staticlib", "cdylib" ]

[dependencies]
libc = "0.2"
weld = { path = ".." }

[build-dependencies]
cbindgen = "0.6"
