[package]
name = "weld"
version = "0.3.1"
authors = ["Weld Developers <weld-group@lists.stanford.edu>"]
build = "build.rs"
description = "Weld is a language and runtime for improving the performance of data-intensive applications."
readme = "../README.md"
license = "BSD-3-Clause"
homepage = "https://www.weld.rs"
repository = "https://github.com/weld-project/weld"
edition = "2018"

[dependencies]
chrono = "0.4.0"
env_logger = "0.4.3"
fnv = "1.0.5"
lazy_static = "0.2.1"
libc = "0.2.0"
llvm-sys = "60.0.3"
log = "0.3.8"
num-integer = "0.1"
regex = "0.1.71"
time = "0.1.38"
uuid = { version = "0.7.1", features = ["v4"] }
