[package]
name = "weld"
version = "0.4.0"
authors = ["Weld Developers <weld-group@lists.stanford.edu>"]
build = "build.rs"
description = "Weld is a language and runtime for improving the performance of data-intensive applications."
readme = "../README.md"
license = "BSD-3-Clause"
homepage = "https://www.weld.rs"
repository = "https://github.com/weld-project/weld"
edition = "2018"

[dependencies]
chrono = "0.4.0"
env_logger = "0.4.3"
fnv = "1.0"
lazy_static = "1.4.0"
libc = "0.2.0"
llvm-sys = "60.0.3"
log = "0.3.8"
num-integer = "0.1"
regex = "1.3"
time = "0.1.38"
uuid = { version = "0.7.1", features = ["v4"] }
