[package]
name = "weld_llvm"
version = "0.1.0"
authors = ["Matei Zaharia <matei.zaharia@gmail.com>"]

[lib]
path = "lib.rs"

[dependencies]
easy_ll = { path = "../easy_ll", version = "^0.1.0" }
weld_ast = { path = "../weld_ast", version = "^0.1.0" }
weld_error = { path = "../weld_error", version = "^0.1.0" }
weld_parser = { path = "../weld_parser", version = "^0.1.0" }
